# stealth-startup

./: .gitignore  LICENSE  README.md  db.sqlite3  docker-compose.yml
echo/: .dockerignore  Dockerfile  index.html  package-lock.json
echo/src/: App.css  App.jsx  index.css
echo/src/components/: JustificationFooter.jsx  ProductList.jsx  SearchBar.jsx
neuron/: .env.example  README.md  pyproject.toml  relevant_products.json  skincare catalog.csv  verified_reviews.csv
neuron/src/neuron/: crew.py  main.py
neuron/src/neuron/config/: agents.yaml  tasks.yaml
neuron/src/neuron/tools/: config.py  product_retriever.py  product_schema_retriever.py  review_retriever.py
pulse/: .dockerignore  Dockerfile  constants.py  embeddings.jsonl  get_relevant_products.json  main.py  memory.py  pyproject.toml  relevant_products.json  sanity.py  search.py
pulse/neuron/: crews.py  verified_reviews.csv
pulse/neuron/agents/: manager.py  product_matcher.py  proofreader.py  salesman.py
pulse/neuron/config.bkp/: agents.yaml  tasks.yaml
pulse/neuron/tasks/: cross_verify_output_sql.py  find_similar_user_reviews.py  get_relevant_products.py  prepare_sql_for_close_user_reviews.py  prepare_sql_for_relevant_products.py
pulse/neuron/tools/: config.py  product_retriever.py  product_schema_retriever.py  user_review_retriever.py  user_review_schema_retriever.py  utils.py
pulse/neuron/tools/semantic_search/: config.py  ingest.py  model.py  search.py  store.py
scripts/: reviews_csv_generation.py
scripts/data_ingestion/: insert_beauty_products.py  insert_user_reviews.py
(+1 files in other folders)
