[project]
name = "pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.121.1",
    "fastapi[standard]>=0.115.12",
    "neuron",
    "redis>=6.2.0",
    "sentence-transformers>=4.1.0",
]

[tool.uv.sources]
neuron = { path = "../neuron" }
